--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
+    "react-swipeable": "^7.0.2",
     "router": "^2.2.0",
     "tailwindcss": "^4.1.8"
   },
